<resources>
    <string name="app_name">Popular Movies</string>
    <string name="error_message">An error has occurred.Please try again.</string>
    <string name="internet_error_message">Network unavailable.Please connect to a network and try again</string>
    <string name="movie_title_heading">Title</string>
    <string name="release_date_heading">Release : </string>
    <string name="user_rating_heading">User Rating :</string>

    <!-- Please add your API key here-->
    <string name="api_key"></string>
    <string name="top_rated_movies_action_bar">Top Rated Movies</string>
    <string name="popular_movies_action_bar">Popular Movies</string>
    <string name="favorite_movies_action_bar">Favorite Movies</string>
    <string name="no_favorites_added_message">No Favorites Movies added. Please add them to see it here</string>
    <string name="action_bar_title_key">action_bar_title_key</string>
    <string name="added_to_favorites_message">successfully added to the favorites list</string>
    <string name="removed_from_favorites_message">removed from favorites list</string>
    <string name="click_to_save_to_favorites">click to save to favorites!!</string>
    <string name="click_to_remove_from_favorites">click to remove from favorites</string>
</resources>
