<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scroll_view_id"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.android.popularmovies.MovieDetailsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/details_title_id"
            style="@style/MovieTitleStyle"
            tools:text="@string/movie_title_heading" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/details_thumbnail_id"
                android:layout_width="150dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                tools:background="@drawable/movies_icon" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:orientation="vertical"
                android:paddingRight="10dp">

                <LinearLayout style="@style/LinearLayoutStyle">

                    <TextView
                        style="@style/TextViewForReleaseRating"
                        android:text="@string/release_date_heading"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/details_release_date_id"
                        style="@style/TextViewForReleaseRating"
                        android:layout_marginLeft="5dp"
                        tools:text="date" />
                </LinearLayout>

                <LinearLayout style="@style/LinearLayoutStyle">

                    <TextView
                        style="@style/TextViewForReleaseRating"
                        android:text="@string/user_rating_heading"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/details_user_rating_id"
                        style="@style/TextViewForReleaseRating"
                        android:layout_marginLeft="5dp"
                        tools:text="Rating" />
                </LinearLayout>

                <LinearLayout style="@style/LinearLayoutStyle">

                    <ToggleButton
                        android:id="@+id/favourites_button_id"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="#077c4d"
                        android:checked="false"
                        android:textOff="@string/click_to_save_to_favorites"
                        android:textOn="@string/click_to_remove_from_favorites" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/details_overview_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textSize="18sp"
            tools:text="details thumbnail iddetails thumbnail idde tails thumbnail id details thumbnail iddetails thumbnail idde tails thumbnail_id" />

        <View style="@style/ViewSeparatorStyle" />

        <TextView
            style="@style/TextViewStylesForTrailersReviews"
            android:text="Trailers" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/trailer_recycler_view_id"
            style="@style/RecyclerViewStyles" />

        <TextView
            android:id="@+id/trailer_data_error_text_view"
            style="@style/ErrorTextViewStyles"
            android:text="@string/internet_error_message" />

        <View style="@style/ViewSeparatorStyle" />

        <TextView
            style="@style/TextViewStylesForTrailersReviews"
            android:text="Reviews" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/review_recycler_view_id"
            style="@style/RecyclerViewStyles" />

        <TextView
            android:id="@+id/review_data_error_text_view"
            style="@style/ErrorTextViewStyles"
            android:text="@string/internet_error_message" />
    </LinearLayout>
</ScrollView>